# my_c_project

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: c-build.yml
include/: test1.h
src/: .test1.c.swp  hello.c  test.c  test1.c
